2025: Day0 changed signature of mains